--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -21,6 +21,27 @@
     }
   }
 
+  .processbar {
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 477px;
+    height: 3px;
+
+    &__container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+
+    &__thumb {
+      position: absolute;
+      height: 100%;
+      background-color: #c00;
+      transition: width 0.1s;
+    }
+  }
+
   #shorts-controller-overlay {
     position: absolute;
     top: 0;
