--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -7,6 +7,7 @@
 body {
   background: rgb(24, 24, 24);
   width: 350px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
   a {
     text-decoration: none;
