--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -2,7 +2,7 @@
   opacity: 0 !important;
 }
 
-#player-container {
+.reel-video-in-sequence.style-scope.ytd-shorts > #player-container {
   position: relative !important;
 
   .mute-button {
